Complete information box with pictures

--- a/style.css
+++ b/style.css
@@ -33,11 +33,13 @@ body {
     justify-content: space-evenly;
     background-color: #1f2937;
     align-items: center;
+    padding: 30px;
 }
 .top-left {
     display: flex;
     flex-direction: column;
     width: 40%;
+    gap: 15px;
 
 }
 .top-header {
@@ -63,8 +65,35 @@ body {
     height:300px;
     border: 1px solid black;
 }
+.information-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
 .information {
-
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1f2937;
+    margin: 30px 0;
+}
+.pictures-container {
+    display: flex;
+}
+.picture-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.pictures {
+    width:200px;
+    height:200px;
+    border:2px solid #3882F6;
+    border-radius: 10px;
+}
+.subtext {
+    text-align: center;
 }
 .inspiration {
 
