--- a/style.css
+++ b/style.css
@@ -3,13 +3,14 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    
+ 
 }
 .header {
     display: flex;
     justify-content: space-evenly;
     padding: 24px;
     background-color: #1f2937;
+    
 }
 .links {
     display: flex;
@@ -34,6 +35,7 @@ body {
     background-color: #1f2937;
     align-items: center;
     padding: 30px;
+     padding: 0 200px;
 }
 .top-left {
     display: flex;
@@ -69,13 +71,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding: 0 200px;
+    margin-bottom: 50px;
     
 }
 .information {
     font-size: 36px;
     font-weight: bolder;
     color: #1f2937;
-    margin: 30px 0;
+    margin: 50px 0;
 }
 .pictures-container {
     display: flex;
@@ -96,7 +100,21 @@ body {
     text-align: center;
 }
 .inspiration {
-
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    color: #1f2937;
+    font-size: 36px;
+    font-style: italic;
+    font-weight: lighter;
+    padding: 50px 200px;
+}
+.quote {
+    
+}
+.writer {
+    font-weight: 600;
+    align-self: flex-end;
 }
 .action {
 
